# legged-state-estimation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.thirdparty/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
cmake/: conan.cmake  logging.h.in  standard_project_settings.cmake
dataset/: config.py  dead_reckon.py  dr.csv  raw_data_vis.py  readme.md  separate.py
dataset/config/: imu_bias.yaml  imu_fake.yaml  spot_mini_mini.yaml
dataset/cpp/: CMakeLists.txt  IMU.cc  IMU.h  main.cpp  readme.md
dataset/cpp/python/: raw_data_vis.py
dataset/data/ground_truth/: sequence1.txt  sequence2.txt
dataset/data/raw_collected/: sequence10.tar.xz
evaluation/: Trajectory.txt  gt_traj.txt  inertialOnlyTrajectory.txt  plot_traj.py  unOptTrajectory.txt
include/: BetweenContactFactor.h  ContactUtils.h  ForwardKinematicsFactor.h  IMU.h  dataloader.h
src/: BetweenContactFactor.h  CMakeLists.txt  IMU.cpp  dataloader.cpp  dataloader.h  imu.cpp  imu.h  imufactorToyExample.cpp  inertialOnly.cpp  leg-utils.h  myIntegration.cpp  one-leg.cpp  oneLegTester.cpp  test.cpp
src/deprecated/: imu.h  testTwist.cpp
test/: CMakeLists.txt  yaml.cpp
utils/: CMakeLists.txt  utils.cpp  utils.h
